Changed help icon div size to fit image size. Fixed overlapping start and tutorial menu display.

--- a/css/tutorialmenu.css
+++ b/css/tutorialmenu.css
@@ -12,8 +12,8 @@
 #tutorialmenu-button {
 	top:15px;
 	width:109px;
-    height:109px;
-	background-size: 109px 109px;
+    height:57px;
+	background-size: 109px 57px;
     background:url(/css/images/icon_help.png) no-repeat;
     cursor:pointer;
     border: none;
